--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4867,9 +4867,10 @@ header::before {
 .contact-item {
     background-color: white;
     box-shadow: 0px 0px 36px 4px rgba(0, 0, 0, 0.05);
-    padding: 60px 30px;
+    padding: 20px 20px;
     margin: 0 auto 30px;
     position: relative;
+    height:"50%"
 }
 
 .contact-item .contact-header {
