--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3276,6 +3276,7 @@ header::before {
 
 .project-thumb {
     text-align: center;
+    padding: 20px
 }
 
 .project-item .project-inner .project-content {
@@ -6515,17 +6516,14 @@ blockquote::before {
 .project-item2 {
     text-align: center;
     margin-top: 15px;
-    padding: 0 40px 25px;
     margin-bottom: 30px;
     text-align: justify;
-    padding: 20px;
     border: 1px solid #ebebeb;
-    box-shadow: 5px 10px 18px #888888;
-    /* width: 150px; */
-    border-radius: 10px;
-    padding: 0px 25px;
+    box-shadow: 5px 5px 5px #888888;
+    border-radius: 20px;
     background: transparent;
-    max-width: 290px;
+    max-width: 200px;
+    height: 150px;
    }
    
    .input:active {
