--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -975,7 +975,7 @@ input[type="submit"] {
 .team-social-two,
 .progress-item .progress-inner,
 .project-item .project-inner .project-content,
-.filter,
+.filter,.project-item2,
 .counter-wrapper,
 .counter-wrapper .counter-item .counter-header,
 .faq-item .faq-title,
@@ -1144,6 +1144,8 @@ blockquote::before {
     .padding-bottom-2 {
         padding-bottom: 85px;
     }
+
+  
 }
 
 .bg_theme {
@@ -2628,7 +2630,7 @@ header::before {
     /* padding: 0 40px 25px; */
     margin-bottom: 30px;
     text-align: justify;
-    padding: 20px;
+    padding: 22px;
     border: 1px solid #ebebeb;
     box-shadow: 5px 10px 18px #888888;
     /* box-shadow: 0 0 30px rgba(183, 156, 156, 0.051); */
@@ -2660,6 +2662,7 @@ header::before {
     background: #ffffff;
     font-size: 30px;
     text-align: center;
+    margin-top: 10px;
 }
 
 .service-item .service-content .title {
@@ -3264,6 +3267,7 @@ header::before {
 .project-item {
     width: calc(100% / 3);
 }
+
 
 .project-item .project-inner {
     position: relative;
@@ -4100,6 +4104,7 @@ header::before {
 .page-header-content {
     text-align: center;
     text-transform: uppercase;
+   
 }
 
 .page-header-content .title {
@@ -6526,11 +6531,10 @@ blockquote::before {
     margin-top: 15px;
     margin-bottom: 30px;
     text-align: justify;
-    border: 1px solid #ebebeb;
-    box-shadow: 5px 5px 5px #888888;
+    border: 1px solid #c4ccd5;
+    box-shadow: 4px 4px 7px #c4ccd5;
     border-radius: 20px;
     background: transparent;
-    max-width: 200px;
     height: 150px;
    }
    
