--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4986,7 +4986,7 @@ header::before {
 /*Contact Section Starts Here*/
 .contact-wrapper {
     padding: 60px;
-    background: #fb3b3a;
+    background:#573b3e;
     margin-bottom: 50px;
 }
 
