--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6691,3 +6691,13 @@ blockquote::before {
     transform: translateX(0em) translateY(0em);
     box-shadow: none;
   }
+
+.column {
+   width: 25%;
+    padding: 5px;
+    margin: 15px;
+    border: 1px solid #ebebeb;
+    box-shadow: 5px 10px 18px #888888;
+    
+  }
+  
