--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6723,4 +6723,9 @@ blockquote::before {
     box-shadow: 5px 10px 18px #888888;
     
   }
+  .columns{
+    float: left;
+    width: 25%;
+    margin: 5px;
+  }
   
