--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1167,7 +1167,7 @@ blockquote::before {
     font-weight: 600;
     font-family: "Roboto", sans-serif;
     margin-bottom: 10px;
-    margin-top: -7px;
+    /* margin-top: -7px; */
 }
 
 @media (min-width: 576px) {
@@ -1178,7 +1178,8 @@ blockquote::before {
 }
 
 .section-header .title {
-    text-transform: capitalize;
+    text-transform:capitalize;
+    font-weight: bold;
     margin-bottom: 10px;
 }
 
@@ -1272,7 +1273,7 @@ blockquote::before {
     left: 0;
     bottom: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.7);
+    background:#192431;
     z-index: 99;
     display: none;
 }
@@ -1351,7 +1352,7 @@ blockquote::before {
 
 /*Footer Section Starts Here*/
 footer {
-    background: #000;
+    background: #dddee8;
     overflow: hidden;
 }
 
@@ -1402,12 +1403,12 @@ footer {
 
 .footer-wrapper .footer-widget.widget-about .footer-logo {
     margin-bottom: 24px;
-    color: #fff;
+    color: #000;
 }
 
 .footer-wrapper .footer-widget.widget-about p {
     margin-bottom: 47px;
-    color: #fff;
+    color: #000;
 }
 
 .footer-wrapper .footer-widget.widget-about .footer-contact {
@@ -1468,12 +1469,12 @@ footer {
 
 .footer-wrapper .footer-widget.widget-link ul li {
     padding: 4px 0;
-    color: #fff
+    color:#000
 }
 
 .footer-wrapper .footer-widget.widget-link ul li a {
     /* color: #333333; */
-    color: #fff
+    color: #000
 }
 
 .footer-wrapper .footer-widget.widget-link ul li a:hover {
@@ -1488,7 +1489,7 @@ footer {
     font-weight: 700;
     text-transform: capitalize;
     margin-bottom: 10px;
-    color: #fff
+    color: #000
 }
 
 @media (min-width: 768px) {
@@ -1511,7 +1512,7 @@ footer {
 
 .footer-bottom-wrapper .item {
     padding: 5px 15px 10px;
-    color: #fff;
+    color: #000;
 }
 
 .footer-bottom-wrapper ul {
@@ -1524,7 +1525,7 @@ footer {
 
 .footer-bottom-wrapper ul li a {
     padding: 5px;
-    color: #fff;
+    color: #000;
 }
 
 .footer-bottom-wrapper ul li a:hover {
@@ -1624,7 +1625,7 @@ header {
     z-index: 99;
     position: relative;
     width: 100%;
-    background: #ffffff;
+    /* background: #ffffff; */
 }
 
 header.active {
@@ -1645,7 +1646,7 @@ header::before {
     left: 0;
     top: 0;
     right: 0;
-    bottom: 20px;
+    /* bottom: 20px; */
     background: #ffffff;
 }
 
@@ -1794,7 +1795,7 @@ header::before {
     justify-content: space-between;
     align-items: center;
     padding: 0 0 0 100px;
-    background: #192431;
+    background-color: #fff;
 }
 
 @media (max-width: 1199px) {
@@ -1828,15 +1829,15 @@ header::before {
 .header-area .menu li a {
     font-size: 14px;
     font-family: "Roboto", sans-serif;
-    color: #ffffff;
+    color: #000;
     padding: 20px 25px;
     position: relative;
 }
 .header-area .menu li a:hover{
-    color:#fb3b3a
+    color:#d6071a
 }
 .header-area .menu li a.active{
-    color:#fb3b3a
+    color:#d6071a
 }
 .header-area .menu li a::before {
     content: "";
@@ -1857,7 +1858,7 @@ header::before {
     height: 70px;
     line-height: 70px;
     text-align: center;
-    background: #fb3b3a;
+    background: #d6071a;
 }
 
 .header-area .menu li a.search-bar::before {
@@ -2024,7 +2025,7 @@ header::before {
     }
 
     .header-area.style-2 .menu>li>a.search-bar {
-        background: #fb3b3a;
+        background: #d6071a;
         padding: 0;
         width: 98px;
         clip-path: polygon(4% 0%, 100% 0%, 98% 100%, 0% 100%);
@@ -2048,7 +2049,7 @@ header::before {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    border: 1px solid #e5e5e5;
+    border: 1px solid #d6071a;
 }
 
 .header-social li a:hover,
@@ -2637,7 +2638,7 @@ header::before {
     text-align: justify;
     padding: 22px;
     border: 1px solid #ebebeb;
-    box-shadow: 5px 10px 18px #888888;
+    box-shadow: 0 0 5px  #999;
     /* box-shadow: 0 0 30px rgba(183, 156, 156, 0.051); */
     height: 283px;
 }
@@ -2661,8 +2662,8 @@ header::before {
     width: 65px;
     height: 56px;
     margin: 0 auto 10px;
-    border: 1px solid #fb3b3a;
-    color: #fb3b3a;
+    border: 1px solid #d6071a;
+    color: #d6071a;
     line-height: 54px;
     background: #ffffff;
     font-size: 30px;
@@ -2708,7 +2709,7 @@ header::before {
     height: 110px;
     background: url(img/service1.png) no-repeat center center;
     background-size: contain;
-    color: #fb3b3a;
+    color: #d6071a;
     line-height: 110px;
     margin: 0 auto 35px;
 }
@@ -2872,7 +2873,7 @@ header::before {
     font-size: 40px;
     line-height: 88px;
     text-align: center;
-    color: #fb3b3a;
+    color: #d6071a;
 }
 
 .choose-item .choose-content {
@@ -3742,8 +3743,8 @@ header::before {
 }
 
 .faq-item.open .faq-title {
-    background: #fb3b3a;
-    border-color: #fb3b3a;
+    background: #d6071a;
+    border-color: #d6071a;
 }
 
 .faq-item.open .faq-title .title,
@@ -3772,7 +3773,7 @@ header::before {
     position: relative;
     padding: 0 40px 30px;
     border: 1px solid rgba(0, 0, 0, 0.07);
-    border-bottom-color: #fb3b3a;
+    border-bottom-color: #d6071a;
     background: #ffffff;
     height: 300px;
     /* border: 1px solid; */
@@ -3800,7 +3801,7 @@ header::before {
     -moz-border-radius: 50%;
     border-radius: 50%;
     overflow: hidden;
-    border: 1px solid #fb3b3a;
+    border: 1px solid #d6071a;
     margin: 0 auto -10px;
     -webkit-transform: translateY(-35px);
     -ms-transform: translateY(-35px);
@@ -4252,14 +4253,14 @@ header::before {
 
 
 .service-tab-menu-text {
-    margin-top: 35px;
+    /* margin-top: 35px; */
     position: relative;
-    padding: 0 30px 30px;
-    border: 1px solid rgba(0, 0, 0, 0.07);
+    /* border: 1px solid rgba(0, 0, 0, 0.07); */
     background: #ffffff;
-   margin-left: 30px;
-   margin-right: 30px;
-    box-shadow: 5px 10px 18px #888888;
+    padding: 20px;
+   /* margin-left: 30px;
+   margin-right: 30px; */
+    /* box-shadow: 5px 10px 18px #888888; */
     width: 100%;
 
 }
@@ -6249,8 +6250,8 @@ blockquote::before {
 
 .read-button.active:hover {
     color: #ffffff;
-    background: #fb3b3a;
-    border-color: #fb3b3a;
+    background: #d6071a;
+    border-color: #d6071a
 }
 
 .custom-button {
@@ -6258,7 +6259,7 @@ blockquote::before {
     color: #ffffff;
     padding: 10px 25px;
     line-height: 30px;
-    background: #fb3b3a;
+    background: #d6071a;
     text-transform: uppercase;
     border: 1px solid #fb3b3a;
 }
@@ -6268,9 +6269,9 @@ blockquote::before {
     color: #ffffff;
     padding: 5px;
     line-height: 30px;
-    background: #fb3b3a;
+    background: #d6071a;
     /* text-transform: uppercase; */
-    border: 1px solid #fb3b3a;
+    border: 1px solid #d6071a;
     border-radius: 5px;
 
 }
@@ -6509,7 +6510,7 @@ blockquote::before {
     -webkit-transform: translateY(150px);
     -ms-transform: translateY(150px);
     transform: translateY(150px);
-    background: #fb3b3a;
+    background: #d6071a;
     text-align: center;
     font-size: 16px;
 }
@@ -6724,3 +6725,36 @@ blockquote::before {
     
   }
   
+.faq-sub-section{
+    margin-top:30px ;
+    border: 1px solid #ebebeb; 
+    margin-bottom: 80px;
+    -moz-box-shadow: 0 0 5px #999;
+    -webkit-box-shadow: 0 0 5px #999;
+    box-shadow: 0 0 5px #999;
+}
+
+
+.service-tab-menu button  {
+    font-size: 14px;
+    text-align: center;
+    font-weight: 600;
+    text-transform: capitalize;
+    color: #ffffff;
+    line-height: 40px;
+    background: #1b2937;
+    padding:0 30px;
+    width:"25%";
+    margin: 15px 15px;
+}
+.service-tab-menu button a{
+    color:#fff
+}
+
+.service-tab-menu button.active {
+    background-color: #d6071a;
+}
+
+.service-tab-menu button:hover {
+    background: #d6071a;
+}
